<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OrganiCompras</string>
    <string name="iconDesc">Splash ShoppingCart</string>
    <string name="compras">Mi Compra</string>
    <string name="despensa">Mi Despensa</string>
    <string name="historial">Mi Historial</string>
    <string name="ofertas">Ofertas</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="msjMax">¿Desea introducir un máximo para su compra?</string>
    <string name="tituloMax">Máximo de la compra</string>
    <string name="atras">Volver al menú</string>
    <string name="msjAceptar">Debe ingresar un monto</string>
    <string name="msjIngresarMax">Introduzca un máximo:</string>
    <string name="formato">Ej: 2000</string>
    <string name="listo">Listo</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="salirVacio">Lista vacia</string>
    <string name="msjSalirVacio">¿Desea agregar un producto?No se pueden guardar listas vacias.</string>
    <string name="producto">Producto</string>
    <string name="cantidad">Cantidad</string>
    <string name="subtotal">Subtotal</string>
    <string name="lbl_cantidad">Cantidad:</string>
    <string name="cero">0</string>
    <string name="total">Total: $</string>
    <string name="máximo">Máximo: $</string>
    <string name="lista">Productos no encontrados</string>
    <string name="borrar">Borrar</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="nombre">Nombre</string>
    <string name="marca">Marca</string>
    <string name="neto">Neto</string>
    <string name="medida">Gr</string>
    <string name="signo">$</string>
    <string name="precio">Precio</string>
    <string name="uno">1</string>
    <string name="supermercado">¿Donde comprará?</string>
    <string name="tituloProdNoEncontrado">Producto no encontrado</string>
    <string name="prodNoEncontrado">Este producto no se encuentra. ¿Desea agregarlo?</string>
    <string name="msjProd">Debe ingresar un nombre</string>
    <string name="nombreProducto">Nombre del producto:</string>
    <string name="precioProducto">Precio:</string>
    <string name="formatoProducto">Ej: 10.50</string>
    <string name="salirGuardar">¿Desea guardar la lista?</string>
    <string name="salirGuardarMsj">Esta lista no esta guardada. ¿Desea guardarla y salir?</string>
    <string name="consumoMensual">Consumo mensual</string>
    <string name="consumoAnual" tools:ignore="Typos">Consumo anual</string>
    <string name="borrarCompra">Eliminar esta compra</string>
    <string name="mensajeBorrarCompra">¿Esta seguro de eliminar esta compra?</string>
    <string name="mensajeBorrarProducto">¿Desea eliminar los productos?</string>
    <string name="seleccionar">Seleccionar todo</string>
    <string name="agregar">Agregar</string>
    <string name="productoNombre">Nombre del producto</string>
    <string name="gastoAproximado">Gasto aproximado</string>
    <string name="tituloGastoAproximado">Usted gastará aproximadamente:</string>
    <string name="despensaGuardar">La lista ha sido modificada. ¿Desea guardar las modificaciones y salir?</string>
    <string name="msjProductoNoEncontrado">Este producto no se encuentra, es probable que en el supermercado tampoco. ¿Desea agregarlo de todas formas?</string>
    <string name="totalUnitario">Total unitario: $</string>
    <string name="lugar">Lugar:</string>
    <string name="fecha">Fecha:</string>
    <string name="cantidadProductos">Cantidad de productos:</string>
    <string name="descripcion">Descripcion</string>
    <string name="obligatorio">*</string>
    <string name="msjMasdatos">¿Desea agregar más datos sobre este producto?</string>
    <string-array name="valores_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="valores_año">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>
    <string-array name="medidas">
        <item> </item>
        <item>Gr</item>
        <item>Kg</item>
        <item>Cc</item>
        <item>Litro</item>
        <item>Ml</item>
    </string-array>
    <string name="errorSpinner">Debe colocar una medida</string>
</resources>
