<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_guardar"
        android:title="@string/guardar"
        android:icon="@drawable/ic_guardar"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_borrar"
        android:title="@string/borrar"
        android:icon="@drawable/ic_borrar"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/gasto"
        app:showAsAction="never"
        android:title="@string/gastoAproximado"/>
    <item
        android:id="@+id/action_productoNoEncontrado"
        app:showAsAction="never"
        android:title="@string/tituloProdNoEncontrado"/>

</menu>