<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_guardar"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        android:title="@string/guardar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_borrar"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/borrar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_lista"
        app:showAsAction="never"
        android:title="@string/lista"/>

</menu>