<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/descrip"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        app:layout_constraintStart_toStartOf="@+id/nombre"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <TextView
        android:id="@+id/marca"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/marca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descrip" />

    <TextView
        android:id="@+id/neto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/neto"
        app:layout_constraintBaseline_toBaselineOf="@+id/medida"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/medida"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:text="@string/medida"
        app:layout_constraintStart_toEndOf="@+id/neto"
        app:layout_constraintTop_toBottomOf="@+id/marca" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0.23"
        android:padding="5dp"
        android:paddingTop="5dp"
        android:text="@string/nombre"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/id" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.37"
        android:text="@string/nombre"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>