<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/cantidad_prod"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="5dp"
            android:text="@string/nombre"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/check"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/marca"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:text="@string/marca"
            app:layout_constraintStart_toEndOf="@+id/check"
            app:layout_constraintTop_toBottomOf="@+id/nombre" />


        <TextView
            android:id="@+id/neto"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/neto"
            app:layout_constraintStart_toStartOf="@+id/marca"
            app:layout_constraintTop_toBottomOf="@+id/marca" />

        <TextView
            android:id="@+id/medida"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/medida"
            app:layout_constraintStart_toEndOf="@+id/neto"
            app:layout_constraintTop_toBottomOf="@+id/marca" />

        <CheckBox
            android:id="@+id/check"
            android:layout_width="27dp"
            android:layout_height="34dp"
            android:checked="false"
            app:layout_constraintBottom_toTopOf="@+id/marca"
            app:layout_constraintEnd_toStartOf="@+id/nombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/cantidad_prod"
        android:layout_width="30dp"
        android:layout_height="23dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/uno"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>